Support yield on virtual thread on EPollSelector select()